Fix CSS palette scrollbar

--- a/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
+++ b/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
@@ -1162,3 +1162,17 @@ div#inline-actions ul.menu i, div#tablehandling ul.menu i {
 div#tablehandling ul.menu li a {
   padding: 0px !important;
 }
+
+.palette-scrollbar {
+  min-width: 100%;
+  overflow: scroll;
+}
+
+@-moz-document url-prefix(''){
+  .palette-scrollbar {
+    min-width: 100%;
+    width: auto;
+    overflow: scroll;
+  }
+}
+
